--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
             </div>
             <div class="txt-img">
                 <div class="img">
-                    <!-- <img src="asset/portrait.jpg"> -->
                 </div>
-                <!-- <div class="txt">
-                    <h3>Une brève introduction,<br> qui suis-je ?</h3>
+                <!-- <div class="txt"> -->
+                    <!-- <h3>Une brève introduction,<br> qui suis-je ?</h3>
                     <p>👋Salut, je suis Sandy Lebel, une passionnée du développement web en pleine quête dans ce
                         domaine.</p>
                     <br>
@@ -48,11 +47,11 @@
                         monde.</p>
                     <br>
                     <p>🛠️ Je suis ouverte à de nouvelles opportunités d'apprentissage et mon portfolio reflète mon
-                        parcours jusqu'à présent.</p>
+                        parcours jusqu'à présent.</p> -->
 
-                    <p>🌐 Rejoignez-moi dans cette aventure numérique où la curiosité et la créativité guident chaque ligne de code.</p>
+                    <!-- <p>🌐 Rejoignez-moi dans cette aventure numérique où la curiosité et la créativité guident chaque ligne de code.</p> -->
 
-                </div> -->
+                <!-- </div> -->
             </div>
         </div>
     </div>
