--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="txt-img">
                 <div class="img">
                 </div>
-                <!-- <div class="txt"> -->
-                    <!-- <h3>Une brève introduction,<br> qui suis-je ?</h3>
+                <div class="txt">
+                    <h3>Une brève introduction,<br> qui suis-je ?</h3>
                     <p>👋Salut, je suis Sandy Lebel, une passionnée du développement web en pleine quête dans ce
                         domaine.</p>
                     <br>
@@ -47,11 +47,11 @@
                         monde.</p>
                     <br>
                     <p>🛠️ Je suis ouverte à de nouvelles opportunités d'apprentissage et mon portfolio reflète mon
-                        parcours jusqu'à présent.</p> -->
+                        parcours jusqu'à présent.</p>
 
                     <!-- <p>🌐 Rejoignez-moi dans cette aventure numérique où la curiosité et la créativité guident chaque ligne de code.</p> -->
 
-                <!-- </div> -->
+                </div>
             </div>
         </div>
     </div>
