Home, Aboute done

--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
         </div>
     </div>
 
+    <!-- <div class="skills">
+        <div class="windows-skills">
+            <div class="titre-skills">
+                <h2>Mes Skills</h3>
+            </div>
+            <div class="soft-skill">
+                <div class="soft">
+                    <div class="titre">
+                        <h3>Soft-skill</h3>
+                        <p> Les soft skills se définissent comme <br> les capacités à se comporter et à être <br> compte-tenu de la situation</p>
+                    </div>
+                    <div class="para">
+                        <p>Communication</p>
+                        <p>Efficacité</p>
+                        <p>Intelligence Situationelle</p>
+                        <p>Sens du collectif</p>
+                        <p>Intelligence Emotionnelle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
 </body>
 
 </html>
